--- a/mobile.html
+++ b/mobile.html
@@ -44,21 +44,21 @@
   </header>
 
   <!-- ========================================
-       MAIN CONTENT
+       MAIN CONTENT (Tab-based Pages)
        ======================================== -->
   <main class="mobile-main">
-    <!-- HOME SECTION -->
-    <section id="home" class="mobile-page-section">
+    <!-- HOME PAGE -->
+    <section id="page-home" class="mobile-page active">
       <div class="mobile-hero">
         <div class="mobile-hero-badge">Driving School</div>
         <h1 class="mobile-hero-title">Book Your Driving Lesson</h1>
         <p class="mobile-hero-subtitle">Start your journey to becoming a confident driver. Choose your time slot below.</p>
-        <a href="#schedule" class="btn btn-primary mobile-hero-cta">View Schedule</a>
+        <button class="btn btn-primary mobile-hero-cta" data-nav="schedule">View Schedule</button>
       </div>
     </section>
 
-    <!-- SCHEDULE SECTION -->
-    <section id="schedule" class="mobile-page-section">
+    <!-- SCHEDULE PAGE -->
+    <section id="page-schedule" class="mobile-page">
       <div class="mobile-section-header">
         <h2 class="mobile-section-title">Class Schedule</h2>
         <p class="mobile-section-subtitle">Tap an available slot to book</p>
@@ -77,8 +77,8 @@
       </div>
     </section>
 
-    <!-- ABOUT SECTION -->
-    <section id="about" class="mobile-page-section">
+    <!-- ABOUT PAGE -->
+    <section id="page-about" class="mobile-page">
       <div class="mobile-section-header">
         <h2 class="mobile-section-title">Why Choose Us</h2>
         <p class="mobile-section-subtitle">Your trusted driving partner</p>
@@ -93,7 +93,7 @@
           </div>
           <div class="mobile-about-content">
             <h3 class="mobile-about-title">Expert Instructors</h3>
-            <p class="mobile-about-text">Certified and experienced driving instructors</p>
+            <p class="mobile-about-text">Certified and experienced driving instructors who prioritize your safety and confidence on the road.</p>
           </div>
         </div>
 
@@ -105,7 +105,7 @@
           </div>
           <div class="mobile-about-content">
             <h3 class="mobile-about-title">Flexible Schedule</h3>
-            <p class="mobile-about-text">Morning to evening, 7 days a week</p>
+            <p class="mobile-about-text">Choose from morning to evening slots, 7 days a week. Book lessons that fit your busy lifestyle.</p>
           </div>
         </div>
 
@@ -117,17 +117,17 @@
           </div>
           <div class="mobile-about-content">
             <h3 class="mobile-about-title">Safe Learning</h3>
-            <p class="mobile-about-text">Modern dual-control vehicles</p>
+            <p class="mobile-about-text">Modern dual-control vehicles and comprehensive insurance ensure a safe learning environment.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT SECTION -->
-    <section id="contact" class="mobile-page-section">
+    <!-- CONTACT PAGE -->
+    <section id="page-contact" class="mobile-page">
       <div class="mobile-section-header">
         <h2 class="mobile-section-title">Contact Us</h2>
-        <p class="mobile-section-subtitle">Get in touch</p>
+        <p class="mobile-section-subtitle">Get in touch with us</p>
       </div>
 
       <div class="mobile-contact-cards">
@@ -179,30 +179,30 @@
        BOTTOM NAVIGATION
        ======================================== -->
   <nav class="bottom-nav">
-    <a href="#home" class="bottom-nav-item active" data-section="home">
+    <button class="bottom-nav-item active" data-page="home">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
       </svg>
       <span>Home</span>
-    </a>
-    <a href="#schedule" class="bottom-nav-item" data-section="schedule">
+    </button>
+    <button class="bottom-nav-item" data-page="schedule">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
       </svg>
       <span>Schedule</span>
-    </a>
-    <a href="#about" class="bottom-nav-item" data-section="about">
+    </button>
+    <button class="bottom-nav-item" data-page="about">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
       </svg>
       <span>About</span>
-    </a>
-    <a href="#contact" class="bottom-nav-item" data-section="contact">
+    </button>
+    <button class="bottom-nav-item" data-page="contact">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
       </svg>
       <span>Contact</span>
-    </a>
+    </button>
   </nav>
 
   <!-- ========================================
@@ -266,9 +266,50 @@
   <script src="js/utils.js"></script>
   <script src="js/mobile.js"></script>
 
-  <!-- Viewport Switch Detection -->
+  <!-- Tab Navigation & Viewport Switch -->
   <script>
     (function() {
+      // Tab-based page navigation
+      const pages = document.querySelectorAll('.mobile-page');
+      const navItems = document.querySelectorAll('.bottom-nav-item[data-page]');
+      const heroCta = document.querySelector('.mobile-hero-cta[data-nav]');
+
+      function switchPage(pageName) {
+        // Hide all pages
+        pages.forEach(page => page.classList.remove('active'));
+        // Remove active from all nav items
+        navItems.forEach(item => item.classList.remove('active'));
+
+        // Show target page
+        const targetPage = document.getElementById('page-' + pageName);
+        if (targetPage) {
+          targetPage.classList.add('active');
+          window.scrollTo(0, 0);
+        }
+
+        // Set active nav item
+        navItems.forEach(item => {
+          if (item.dataset.page === pageName) {
+            item.classList.add('active');
+          }
+        });
+      }
+
+      // Nav item click handlers
+      navItems.forEach(item => {
+        item.addEventListener('click', () => {
+          switchPage(item.dataset.page);
+        });
+      });
+
+      // Hero CTA click handler
+      if (heroCta) {
+        heroCta.addEventListener('click', () => {
+          switchPage(heroCta.dataset.nav);
+        });
+      }
+
+      // Viewport switch detection
       let resizeTimer;
       const DESKTOP_BREAKPOINT = 768;
 
@@ -282,29 +323,6 @@
         clearTimeout(resizeTimer);
         resizeTimer = setTimeout(checkViewport, 250);
       });
-
-      // Bottom nav active state on scroll
-      const sections = document.querySelectorAll('.mobile-page-section');
-      const navItems = document.querySelectorAll('.bottom-nav-item[data-section]');
-
-      function updateActiveNav() {
-        let current = '';
-        sections.forEach(section => {
-          const sectionTop = section.offsetTop - 100;
-          if (window.scrollY >= sectionTop) {
-            current = section.getAttribute('id');
-          }
-        });
-
-        navItems.forEach(item => {
-          item.classList.remove('active');
-          if (item.dataset.section === current) {
-            item.classList.add('active');
-          }
-        });
-      }
-
-      window.addEventListener('scroll', updateActiveNav);
     })();
   </script>
 </body>
